--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,12 @@
 
 <body>
     <a href="index.html"><img src="img/Full-logo.svg" alt="Indelivered" class="header-logo"></a>
+    <div class="info-container"><p class="info">A public directory of New Zealand businesses that deilver to you</p></div>
+    
     <div class="search-section">
         <form id="search-form" action="JavaScript:search()" class="search">
             <div id="locator-button" class="locator-button"></div>
-            <input type="text" id="address" name="address" class="input-text" placeholder=" Search address" autofocus>       
+            <input type="text" id="address" name="address" class="input-text" placeholder=" Enter your address to continue" autofocus>       
         </form>
     </div>
     
