--- a/public/register-business.html
+++ b/public/register-business.html
@@ -62,15 +62,15 @@
                         <label for="type">Type:</label>
                         <br>
                         <select id="type" name="type">
-                                <option value="Diary">Diary</option>
-                                <option value="Bakery">Bakery</option>
-                                <option value="Pharmacy">Pharmacy</option>
-                                <option value="Butchery">Butchery</option>
-                                <option value="Supermarket">Supermarket</option>
-                                <option value="Beverage">Beverage</option>
                                 <option value="Produce">Produce</option>
+                                <option value="Meat">Meat</option>
                                 <option value="Seafood">Seafood</option>
-                                <option value="Apparel">Apparel</option>
+                                <option value="Beverage">Beverage</option>
+                                <option value="Baked">Baked</option>
+                                <option value="Diary">Diary</option>
+                                <option value="Health">Health</option>
+                                <option value="Ready-Food">Ready-Food</option>
+                                <option value="Other">Other</option>
                         </select>
                     </li>
                     <li><br></li>
