added filter select all

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,10 @@
 
     <div class="filter-section" id="filter-section">
         <h1 class="filter-heading">Select Filters</h1>
-        <div class="filters"></div>       
+        <div class="filters"></div>
+        <div id="select-all"><img src="img/Tick.svg"></div>
+        <div id="unselect-all"><img src="img/Cross.svg"></div>
+
     </div>
 
     <p id="no-results">No results found</p>
