changed register link to google form

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 
     <br>
 
-    <a href="register-business.html" class="form-link-text" target="_blank">Register a business</a>  
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfyI00GvyRj_BALtWXOy6d4V_e4h0oiHhM91anNVDqP9txOWQ/viewform" class="form-link-text" target="_blank">Register a business</a>  
 
     </div>
 
